--- a/details1.html
+++ b/details1.html
@@ -124,8 +124,8 @@ $('#accordion').on('shown.bs.collapse', toggleChevron);
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="expo.html">Home</a></li>
-          <li><a href="index.html">Mission</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="expo.html">Mission</a></li>
           <li><a href="details1.html">Find Pet</a></li>
           <li><a href="landing222.html">About Us</a></li>
           <li><a href="#">Help</a></li>
