--- a/landing222.html
+++ b/landing222.html
@@ -190,7 +190,7 @@ h2{
         width: 100%; /* Set width to 100% */
         margin: auto;
         position: absolute;
-        
+
     }
     .carousel-caption h3 {
         color: #fff !important;
@@ -220,8 +220,8 @@ h2{
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="expo.html">Home</a></li>
-          <li><a href="index.html">Mission</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="expo.html">Mission</a></li>
           <li><a href="details1.html">Find Pet</a></li>
           <li><a href="landing222.html">About Us</a></li>
           <li><a href="#">Help</a></li>
