--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <source src="images/Dog-Lovers/MP4/Dog-Lovers.mp4" type="video/mp4" />
               <source src="frontend/images/Dog-Lovers/WEBM/Dog-Lovers.webm" type="video/webm" />
           </video>
-          <div class="box fade-in one"><a class="about" href="index.html">Mission</div></a>
+          <div class="box fade-in one"><a class="about" href="expo.html">Mission</div></a>
 
 <div class="box fade-in two" ><a class="about" href="landing222.html">Find Pets</a></div>
 
